Dec 94 (#40)
* ajuste na criação de reunioes

* phpcs

* removendo dd

* ajuste de testes
